Switched to a Python-like project structure

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,444 +1,1 @@
-2009-02-22  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* ChangeLog, NEWS, configure.ac: Tagged 0.1 release.
-
-2009-02-22  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/messaging.c, src/main.c: Tiny fixes in libmemo/messaging.c and
-	open_database.
-
-2009-02-22  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Fixed a memory leak in open_database.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* README: Cleaned up README removing duplicate information.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* doc/memo.texi: Refreshed the Texinfo documentation.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/messaging.c: Fixed a bug in memo_send_test.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/Makefile.am: memo binary is now installed in bindir.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* website/: Prepared a simple ikiwiki based website.
-
-2009-02-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: User's e-mail address is set in MEMO_EMAIL environment
-	variable.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/Makefile.am: Added messaging.h to libmemo_la_SOURCES in
-	libmemo/Makefile.am.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am, configure.ac, general.sh, globals.sh, memo.in, receiving.sh,
-	sending.sh: Removed old shell scripts.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/messaging.c: memo_send_test adds a footer to the e-mail.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/messaging.c, libmemo/parse-reply.pl, src/main.c, test/tests.c:
-	Added license information and Vim formatting line to files lacking them.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/libmemo.h, libmemo/messaging.c, src/main.c:
-	Simple test sending functions are ready. memo_database_words_to_test
-	prepares a set of tests to be sent. Words are collected by memo_send_test
-	which spawns mailx and pipes to it the message body.  The feature described
-	above has been added to Memo CLI. Additionally some fixes has been done in
-	libmemo/database.c.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac, m4/ax_lib_sqlite3.m4: Updates in AX_LIB_SQLITE3 m4 macro.
-
-2009-02-20  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/database.h:
-	memo_database_load_words_from_database_data works for multiple words.  It
-	returns an array of pointers to memo_word structs (remember to free it).
-
-2009-02-19  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/messaging.c, libmemo/messaging.h: Refactoring in
-	libmemo/messaging.c.
-
-2009-02-19  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac, libmemo/database.c, libmemo/database.h, libmemo/messaging.c,
-	libmemo/word.c, m4/ax_lib_sqlite3.m4, test/Makefile.am, test/tests.c: A
-	bunch of small fixes. Checking for fork(2) and dup2(2) in configure.ac.
-	memo_word_load_from_database_data renamed to
-	memo_database_load_word_from_database_data (therefore moving to the database
-	module) and added it's header and a bit of documentation to
-	libmemo/database.h. Added some includes to libmemo/messaging.c.	Removed
-	AC_LANG_{PUSH,POP}(C++) from AX_LIB_SQLITE macro making the configure run
-	shorter as it doesn't search for a C++ compiler. Added new common to include
-	list in test/Makefile.am. Small fixes in test/test.cc eliminating some GCC
-	warnings.
-
-2009-02-19  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Added --check-reply to memo.
-
-2009-02-18  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac, libmemo/Makefile.am, libmemo/messaging.c,
-	libmemo/parse-reply.pl, test/tests.c: Test of replies parsing functions has
-	been passed. The memo_check_reply function forks and executes a Perl script
-	which parses the body of an e-mail and extracts question-answer pairs.
-	These are subsequently read by the main process which checks if they match
-	in the database and updates positive or negative answers count.
-	Unfortunately the current implementation does not work before running make
-	install because parse-reply.pl cannot be found in $libdir/memo.
-
-2009-02-18  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/libmemo.h, libmemo/word.c, test/tests.c: Added
-	answers' count modifying functions. This required some other changes, e.g.
-	getting answers' numbers from the database and inserting them in
-	memo_word_save.
-
-2009-02-18  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/word.c, test/tests.c: Implemented and tested memo_word_update.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac, test/directory.h.in, test/tests.c: Removed directory.h.in as
-	a better solution has been found.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac, libmemo/Makefile.am, libmemo/libmemo.h, libmemo/messaging.c,
-	test/Makefile.am, test/directory.h.in, test/reply1.eml, test/tests.c:
-	Prepared signatures and tests for reply checking functions.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h, libmemo/word.c, test/tests.c: Auto reloading
-	implemented (including tests).
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Implemented a comparison of lists of word's translations.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/database.h, libmemo/libmemo.h: Added changes
-	counter to memo_database. Now memo_database is a struct containing a
-	pointer to SQLite database and a long integer representing a changes
-	counter. The counter is incremented each time an INSERT, UPDATE or DELETE
-	query is sent to the database. It will allow memo_word structs to
-	automatically update themselves by checking if the changes counter has been
-	incremented since the last update.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Doxyfile.in, doc/Makefile.am, doc/memo_word_get_translations.c,
-	libmemo/libmemo.h, libmemo/word.c: Documenting, minor changes in code.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am: If configured with Check, distcheck will also run with Check.
-
-2009-02-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Added a test for memo_word_copy.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h, libmemo/word.c, test/tests.c: get_translations: fixed
-	the test and made the function pass it. Additionally fixed memory freeing in
-	the test.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h, libmemo/word.c, test/tests.c: Created signature
-	and test for memo_word_get_translations function.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Changed naming convention in test/tests.c.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/libmemo.h, libmemo/word.c, src/main.c,
-	test/tests.c: Moved word searching functions to database module. It seems
-	more logical, as memo_word_find* functions were operating on a memo_database
-	object and memo_word was only a result of their work. The modifications
-	involve only changes in naming and moving from one file to another.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/word.c: Small fix in memo_word_save.
-
-2009-02-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/{database.[ch],word.c,libmemo.h}, src/main.c, test/tests.c:
-	memo_database is passed to functions as address. memo_database struct is
-	now an alias for sqlite3 (instead of sqlite3*). This change allowed to
-	modify headers of all functions taking a memo_database as an argument
-	without changing the bodies.
-
-2009-02-15  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/Makefile.am, src/Makefile.am, test/tests.c: Small fixes:
-	make distcheck reports no problems now.
-
-2009-01-31  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Rewritten database_word_reload test.
-
-2009-01-31  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Created word_cmp word comparing function.
-
-2009-01-31  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Commented the tests.
-
-2009-01-31  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h, libmemo/word.c, test/tests.c: Added answers
-	count retrieval functions and tests.
-
-2009-01-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Found another place to use die function.
-
-2009-01-17  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* common/Makefile.am, libmemo/Makefile.am, src/Makefile.am: Renamed
-	libxmalloc to libcommon. It's not only xmalloc's family's library now,
-	as it also contains die function and may be used for other functions in
-	future.
-
-2009-01-16  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* common/Makefile.am, common/messages.c, common/messages.h: New,
-	indispensable function: die.
-	* src/main.c: New function: add_pair, called using --add-pair.
-
-2009-01-13  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Changed option -> action assignment in arguments parsing.
-	Now it's a table of struct { const char*, void (*action)(int, char[]) }.
-
-2009-01-08  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* doc/texinfo.tex: Removed unnecessary texinfo.tex, as it's automatically
-	installed by Autotools.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am, configure.ac, doc/Makefile.am, doc/texinfo.tex: Added
-	doc directory to Makefile.am, added texinfo.tex.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	Added year 2009 to copyright lines.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Created a simple arguments parser.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: Database's tables are automatically created after
-	opening the database unless they already exist.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/Makefile.am: Tests are built only by make check rule.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* src/main.c: Memo opens the default database file and nothing more.
-
-2009-01-07  Jan Stępień <jstepien@users.sourceforge.net>
-
-	Moved macros.h and xmalloc.[ch] to their own directory in project's
-	top directory.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am, configure.ac, src/Makefile.am, src/main.c: Prepared
-	some automake boilerplate for memo C implementation.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/Makefile.am: Added required files to libmemo_la_SOURCES.
-	* configure.ac: Added new macros to configure.ac following autoscan's advice.
-	* libmemo/database.h, libmemo/xmalloc.h: Some comments and minor
-	changes.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/database.h: Strings stored in
-	memo_database_data are freed by memo_database_data_free function.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/Makefile.am, libmemo/database.c, libmemo/word.c,
-	libmemo/xmalloc.c, libmemo/xmalloc.h: Created x{m,re,c}alloc error
-	checking memory allocation functions and replaced existing {m,re,c}alloc
-	with respective alternatives.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/word.c: memo_word_free frees everything it ought to, including
-	the list of word's translations.
-
-2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/tests.c, libmemo/database.h, libmemo/libmemo.h,
-	libmemo/macros.h, libmemo/word.c: Communication with the database is
-	handled by memo_word structures and related functions. The new design
-	follows the active record pattern.
-
-2008-12-23  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: memo_database_add_word passes the test listed in the
-	entry below.
-
-2008-12-23  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Reorganised tests slightly. Created a test adding to the
-	database keys which has been already added.
-
-2008-12-23  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: Checking (word, translation) pairs in both
-	combinations.
-
-2008-12-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/tests.c: Added a swapped (key, value) database test.
-
-2008-12-21  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h, libmemo/database.c: Return values cleaned up, removed
-	useless output. Added some comments. Did some minor fixes. Created
-	memo_database_get_word_id function. And tried to use it in order to
-	follow the DRY rule.
-
-2008-12-19  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: A little bit of refactoring in database.c. New
-	functions: memo_database_data_{init,free} prepare and destroy
-	memo_database_data structure. Memory is allocated more sensibly.
-	* test/tests.c: Added a test trying to find a non-existing item.
-
-2008-12-05  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: Insert/select translation functions pass the
-	test.
-
-2008-11-30  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c: Added memo_database_data structure,
-	memo_database_execute nad memo_database_init functions, started to
-	implement memo_database_add_word. They're all far from being
-	functional.
-	* libmemo/libmemo.h: Added memo_database_init header.
-	* test/tests.c: Added memo_database_init in database_setup.
-	* doc/memo.texi: Developing the database related drafts.
-
-2008-11-30  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* doc/memo.texi: Added a Texinfo documentation file. Currently there's
-	only a draft of the database structure.
-
-2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/database.c, libmemo/libmemo.h: Added new database functions,
-	memo_database_add_word and memo_database_check_translation.
-	* test/tests.c: Added respective tests and modified the existing one.
-
-2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* test/Makefile.am, test/basic_database_test.c, test/tests.c: Added
-	the first Check test.
-
-2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am, configure.ac, test/Makefile.am: Added support for
-	Check. Substituded --enable-tests with --with-check, added Check's
-	flags to CFLAGS and LDFLAGS in test directory.
-
-2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am: Added ACLOCAL_AMFLAGS=-I m4
-
-2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Makefile.am, configure.ac: Tests are now optional, indent clean up.
-	Pass --enable-tests to configure in order to enable tests in test
-	subdirectory.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h: Added a database closing function to the header.
-	* libmemo/database.c, libmemo/Makefile.am:  Started to implement the
-	database using SQLite. Created basic implementations of
-	memo_database_{load,close}.
-	* m4/ax_lib_sqlite3.m4: Added an m4 macro checking for
-	SQLite >= 3.0.0.
-	* test/basic_database_test.c, test/basic_database_test.sh: Created a
-	simple database open/close test.
-	* test/Makefile.am: Added Makefile.am file for test subdirectory.
-	* Makefile.am, autogen.sh, configure.ac: Modified autogen.sh,
-	configure.ac and Makefile.am appropriately
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h: Altered some functions' names, minor changes in
-	comments.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac: Added Doxyfile.in to AC_CONFIG_FILES.
-	* Doxyfile.in: Removed Doxygen's DETAILS_AT_TOP option as it is
-	obsolete.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* libmemo/libmemo.h: Added some structs and function headers.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* Doxyfile.in: Added Doxyfile.in (to be parsed by configure).
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* globals.sh, memo.in: Added a function checking whether memo.rc
-	exists.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* general.sh, receiving.sh, sending.sh: Removed redundant includes.
-
-2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* configure.ac: Added sed and awk check, minor changes.
-
-2008-11-24  Jan Stępień <jstepien@users.sourceforge.net>
-
-	* receiving.sh: Sending a report after receiving a reply.
+See the log of our version control system.
